# notion_code_gen

./: README.md  pyproject.toml
src/notioncodegen/: generator.py  main.py  notion.py
tests/: test_generator.py  test_main.py  test_notion.py
